Colab setup: remove API keys, add GITHUB_SETUP, Colab Secrets support
Made-with: Cursor

--- a/ercot_colab.ipynb
+++ b/ercot_colab.ipynb
@@ -61,8 +61,12 @@
     "from models.gnn_forecaster import train_gnn_forecaster, predict_gnn\n",
     "from models.gnn_anomaly import train_gnn_ae, detect_anomalies_gnn\n",
     "\n",
-    "# Paste your EIA API key (https://www.eia.gov/opendata/)\n",
-    "EIA_API_KEY = \"YOUR_EIA_API_KEY\"  # ← Replace or use: from google.colab import userdata; EIA_API_KEY = userdata.get('EIA_API_KEY')\n",
+    "# EIA API key: paste here, or use Colab Secrets (Keychain icon → Add EIA_API_KEY)\n",
+    "try:\n",
+    "    from google.colab import userdata\n",
+    "    EIA_API_KEY = userdata.get('EIA_API_KEY')\n",
+    "except:\n",
+    "    EIA_API_KEY = \"YOUR_EIA_API_KEY\"  # ← Replace with your key from https://www.eia.gov/opendata/\n",
     "\n",
     "plt.style.use('seaborn-v0_8')\n",
     "print(\"Environment ready.\")"
