--- a/notebooks/ercot_modeling_gnn.ipynb
+++ b/notebooks/ercot_modeling_gnn.ipynb
@@ -50,7 +50,7 @@
     "from models.gnn_forecaster import train_gnn_forecaster, predict_gnn, ERCOTGNNForecaster\n",
     "from models.gnn_anomaly import train_gnn_ae, detect_anomalies_gnn, GNNAutoEncoder\n",
     "\n",
-    "EIA_API_KEY = \"2lXNIsctfqwa8zfH03rDca3IXcLnjgfN5dwUnsM4\"   # Replace with your EIA API key\n",
+    "EIA_API_KEY = \"YOUR_EIA_API_KEY\"  # Get one at https://www.eia.gov/opendata/\n",
     "plt.style.use('seaborn-v0_8')\n",
     "print(\"Environment ready.\")"
    ]
